2001-12-21  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-server.c (component_destroyed_cb): fixed

2001-12-20  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-client.c (cnc_weak_cb): added weak ref callback
	(gda_client_open_connection): use g_object_weak_ref

2001-12-20  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* gda-connection.c: if 'id' is NULL in begin, commit or rollback
	then replace it with a "". This avoids core dump in gda-test.c.

2001-12-20  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-server-connection.c:
	* gda-server-provider.c: s/g_return*_if_fail/bonobo_return*_if_fail

2001-12-19  Cleber Rodrigues <cleberrrjr@bol.com.br>

	* gda-xql-*: ported GDA XML Query stuff to GNOME 2

2001-12-19  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-server-recordset.c (gda_recordset_new): set column titles

	* gda-data-model-array.c (gda_data_model_array_set_n_columns): new
	function

2001-12-18  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-server-recordset.c (impl_Recordset_moveFirst): implemented
	(impl_Recordset_moveNext): implemented
	(impl_Recordset_movePrevious): implemented
	(impl_Recordset_moveLast): implemented

2001-12-18  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-server-recordset.c (impl_Recordset_describe): implemented
	(impl_Recordset_fetch): implemented

2001-12-18  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-row.[ch] (gda_row_get_field): new function

	* gda-server-recordset.[ch] (impl_Recordset_getRowCount): new
	CORBA method added

2001-12-17  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-field.[ch]: removed, moved all functions to gda-row

	* gda-server-recordset.c (gda_server_recordset_get_connection): new
	function

	* gda-row.c (gda_row_attributes_new): new function
	(gda_row_attributes_get_field): new function
	(gda_field_attributes_get_defined_size): new function
	(gda_field_attributes_set_defined_size): new function
	(gda_field_attributes_get_name): new function
	(gda_field_attributes_set_name): new function