@@ -58,18 +58,16 @@ struct _GdaXmlDocumentClass {
 
 GType           gda_xml_document_get_type (void);
 
-GdaXmlDocument *gda_xml_document_new (const gchar * root_doc);
-void            gda_xml_document_construct (GdaXmlDocument * xmlfile,
-					    const gchar * root_doc);
-/*GdaXmlDocument* gda_xml_document_new_from_file (const gchar *filename);*/
-void            gda_xml_document_free (GdaXmlDocument *xmldoc);
+GdaXmlDocument *gda_xml_document_new (const gchar *root_doc);
+void            gda_xml_document_construct (GdaXmlDocument *xmlfile,
+					    const gchar *root_doc);
 
 gint            gda_xml_document_get_compress_mode (GdaXmlDocument *xmldoc);
 void            gda_xml_document_set_compress_mode (GdaXmlDocument *xmldoc, gint mode);
 
-gint            gda_xml_document_to_file (GdaXmlDocument * xmldoc,
-					  const gchar * filename);
-gchar          *gda_xml_document_stringify (GdaXmlDocument * xmldoc);
+gboolean        gda_xml_document_to_file (GdaXmlDocument *xmldoc,
+					  const gchar *uri);
+gchar          *gda_xml_document_stringify (GdaXmlDocument *xmldoc);
 
 G_END_DECLS
 
